--- a/.hansrc
+++ b/.hansrc
@@ -1,24 +1,20 @@
-# based on debian 9-testing's default user .bash_aliases
-# accompanied by https://github.com/divinity76/bashrc/blob/master/.bashrc
+#if LANG isn't set for some reason, default to UTF-8..
+# (IM NOT SURE if this should be done before the interactive check or not?)
+[[ -z "${LANG}" ]] && export LANG='en_US.UTF-8'
+
+if [[ ! "$PATH" =~ "$HOME/.local/bin" ]]; then
+    if [[ -d "$HOME/.local/bin" ]]; then
+        export PATH="$HOME/.local/bin:$PATH"
+    fi
+fi
+# activate virtualenv if it exists and isn't already activated
+if [[ -z "$VIRTUAL_ENV" ]]; then
+    if [[ -f "$HOME/.local/venv/bin/activate" ]]; then
+        VIRTUAL_ENV_DISABLE_PROMPT=1 source "$HOME/.local/venv/bin/activate"
+    fi
+fi
 alias grep='grep --color=auto'
-#alias fgrep='fgrep --color=auto'
-#alias egrep='egrep --color=auto'
 alias ls='ls --color=auto'
-#alias dir='dir --color=auto'
-#alias vdir='vdir --color=auto'
-# colored GCC warnings and errors
-#export GCC_COLORS='error=01;31:warning=01;35:note=01;36:caret=01;32:locus=01:quote=01'
-
-# some more ls aliases
-#alias ll='ls -l'
-#alias la='ls -A'
-#alias l='ls -CF'
-
-alias path='echo -e ${PATH//:/\\n}'
-alias dfh='df -h'
-# alias syslog='sudo tail -100f /var/log/syslog'
-alias cpr='rsync -av --progress'
-
 # perform 'ls' after 'cd' if successful.
 cdls() {
   builtin cd "$*"
@@ -54,16 +50,7 @@ isscreen(){
         printf "This is NOT a screen session.\n";
     fi
 }
-alias dropcaches='echo 3 > /proc/sys/vm/drop_caches'
-syncdropcaches(){
-    printf "syncing... ";
-    sync
-    printf "synced. dropping... "
-    echo 3 > /proc/sys/vm/drop_caches
-    printf "dropped.\n"
-}
 alias traceroute='traceroute --max-hops=255'
-alias vcat='tail -n +1'
 nginx_reload(){
   sudo nginx -t
   RESULT=$?
@@ -79,7 +66,6 @@ nginx_reload(){
   fi
   echo nginx reloaded successfully.
 }
-
 alias p8='ping -s 16 8.8.8.8'
 
 alias upgrade='sudo apt update; sudo apt full-upgrade;'
